@@ -213,6 +213,10 @@ atxmega128a1revd (\fBo\fP) (\fB*\fP)
 .br
 atxmega128a3 (\fBo\fP) (\fB*\fP)
 .br
+atxmega192a3 (\fBo\fP) (\fB*\fP)
+.br
+atxmega256a3 (\fBo\fP) (\fB*\fP)
+.br
 atxmega32a4 (\fBo\fP) (\fB*\fP)
 .br
 atxmega16d4 (\fBo\fP) (\fB*\fP)
